--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -5507,3 +5507,23 @@ footer .footer-links a:last-child {
 }
 .yay { width:49.8%;float:left } .nay { width:49.8%;float:right }
 .narrow {margin-left:50px!important;}
+.alert>p,.alert>ul>li {
+      text-indent: 10px;
+      font-family: 'Open Sans';
+      font-weight: 300;
+      color: #505458;
+}
+blockquote {
+    font-size: 13px;
+    color: #685A5A;
+    margin-top: 15px;
+}
+
+.btn-warning.disabled { background-color:#FFA100;
+}
+#guideNote{    font-size: 9px;
+    opacity: 0.5;
+    float: right;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-right: 17px;}
